--- a/drag-drop/index.html
+++ b/drag-drop/index.html
@@ -9,18 +9,25 @@
 </head>
 
 <body>
+    <div id="button-double"> <button id="spanish-game">Spanish Cinquillo</button>
+        <button id>French Solitarie</button>
+    </div>
+
     <div id="container">
         <div id="basto" class="drop-zone">
-            <h2>Bastos</h2>
+<h2>Bastos</h2>
         </div>
         <div id="espada" class="drop-zone">
             <h2>Espadas</h2>
+
         </div>
         <div id="oro" class="drop-zone">
             <h2>Oros</h2>
+
         </div>
         <div id="copa" class="drop-zone">
             <h2>Copas</h2>
+
         </div>
     </div>
 
