--- a/repaso/ejercicio-2/index.html
+++ b/repaso/ejercicio-2/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container">
-        <div class="note">
+        <div class="parrafo">
             <p class="parrafo-editable">Esto es uno de los párrafos editables</p>
         </div>
-        <div class="note">
+        <div class="parrafo">
             <p class="parrafo-editable">Esto es otro</p>
         </div>
     </div>
